--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,3 +1,4 @@
+//url = jdbc:postgresql://194.58.98.165:5432/homeworld
 url = jdbc:postgresql://localhost:5432/homeworld
-user = Editor
+user = editor
 password = editor
