--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
     <groupId>org.example</groupId>
     <artifactId>homeworld</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -28,7 +27,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.3.6</version>
+            <version>42.5.0</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
@@ -41,9 +40,40 @@
             <artifactId>java-telegram-bot-api</artifactId>
             <version>6.0.1</version>
         </dependency>
+	<dependency>
+  	    <groupId>org.apache.commons</groupId>
+  	    <artifactId>commons-lang3</artifactId>
+  	    <version>3.12.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.codehaus.plexus</groupId>
+	    <artifactId>plexus-utils</artifactId>
+	    <version>1.1</version>
+	</dependency>
     </dependencies>
     <build>
         <plugins>
+		<plugin>
+		  <artifactId>maven-assembly-plugin</artifactId>
+		  <configuration>
+		    <descriptorRefs>
+		      <descriptorRef>jar-with-dependencies</descriptorRef>                            
+		    </descriptorRefs>
+		    <archive>
+		      <manifest>
+			<mainClass>Main</mainClass> 
+		      </manifest>
+		    </archive>
+		  </configuration>
+		  <executions>
+		    <execution>
+		      <goals>
+			<goal>single</goal>                                                           
+		      </goals>
+		      <phase>package</phase>                                                          
+		    </execution>
+		  </executions>
+		</plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
